tests/codegen/fail/enum/derive_no_values.stderr
error: proc-macro derive panicked
 --> fail/enum/derive_no_values.rs:3:10
  |
3 | #[derive(GraphQLEnum)]
  |          ^^^^^^^^^^^
  |
  = help: message: called `Option::unwrap()` on a `None` value
